--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.12.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
-    
   },
   "private": true
 }
