--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-screens": "~4.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.12.4"
+    "react-native-webview": "^13.12.4",
+    "expo-updates": "~0.26.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
